# cardiac_latent_ode

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
configs/: eval.yaml  predict.yaml  train.yaml
configs/datamodule/: mesh_dataset.yaml
configs/model/: cardiac_latent_ode.yaml
configs/paths/: default.yaml
configs/trainer/: trainer.yaml
notebooks/: example_mesh.vtk  explore_assets.ipynb  survival_analysis.ipynb
src/cardiac_latent_ode/: eval.py  predict.py  train.py
src/cardiac_latent_ode/assets/: landmark_indices_bundle.npz  mesh_remap_bundle.npz
src/cardiac_latent_ode/datamodule/: datamodule.py  dataset.py
src/cardiac_latent_ode/model/: loss.py  mesh_operations.py  model.py  modules.py  spiral_conv.py
src/cardiac_latent_ode/preprocessing/: compute_clinical_markers.py  create_template.py  define_cohort.py  extract_demographics.py  mesh_smoothing.py  process_meshes.py
src/cardiac_latent_ode/trainer/: metrics.py  trainer.py
src/cardiac_latent_ode/utils/: constants.py  mesh_processing.py  pylogger.py  survival_analysis.py  utils.py
tests/: test_core.py
