[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cardiac-latent-ode"
authors = [
    { name = "brdav", email = "40954221+brdav@users.noreply.github.com" },
]
description = "A Latent ODE Approach to Spatiotemporal Modeling of Cine Cardiac MRI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "h5py>=3.16.0",
    "hydra-core>=1.3.2",
    "joblib>=1.5.3",
    "lifelines>=0.30.0",
    "matplotlib>=3.10.9",
    "notebook>=7.4.1",
    "numpy>=2.4.4",
    "omegaconf>=2.3.0",
    "pandas>=3.0.3",
    "patsy>=1.0.2",
    "pre-commit>=4.2.0",
    "pydicom>=3.0.2",
    "pymeshlab>=2025.7.post1",
    "pytest>=8.3.5",
    "pyvista>=0.48.4",
    "rich>=15.0.0",
    "ruff>=0.11.2",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "torch>=2.12.0",
    "torch-geometric>=2.7.0",
    "torchdiffeq>=0.2.5",
    "tqdm>=4.67.3",
    "trimesh>=4.12.2",
]
dynamic = ["version"]

[tool.setuptools.package-data]
"cardiac_latent_ode.assets" = ["*.npz"]

[tool.setuptools.dynamic]
version = {attr = "cardiac_latent_ode.__version__"}

[tool.ruff]
extend-include = ["*.ipynb"]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
extend-select = [
    "W605",   # pycodestyle: invalid-escape-sequence
    "S102",   # flake8-bandit: exec-builtin
    "INP",    # flake8-no-pep420
    "PYI",    # flake8-pyi
    "PT",     # flake8-pytest-style
    "PGH",    # pygrep-hooks
    "PL",     # Pylint
    "NPY",    # NumPy-specific rules
    "RUF",    # Ruff-specific rules
]

[tool.ruff.lint.per-file-ignores]

[tool.ruff.lint.pylint]
max-args = 10

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]
